feat: add redux, implement employees-card & employees-list components

--- a/src/assets/styles/_pallete.scss
+++ b/src/assets/styles/_pallete.scss
@@ -2,6 +2,7 @@
   --main-black: #272E37;
   --white: #FFFFFF;
   --gray-10: #efeff0;
+  --gray-20: #575a65;
   --main-bg: #F7F8FA;
   --stroke: #DCE4E6;
 }
