--- a/src/components/ui/dropdown/dropdown.module.scss
+++ b/src/components/ui/dropdown/dropdown.module.scss
@@ -49,11 +49,12 @@
   top: 110%;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 1;
+  z-index: 10;
   opacity: 0;
   visibility: hidden;
   transition: 0.3s;
   box-shadow: 0 0 20px 0 rgba(61, 63, 69, 0.25);
+  background: var(--white);
 
   & li {
     padding: 0.5em 0.5em;
@@ -63,6 +64,9 @@
     cursor: pointer;
     text-align: center;
     transition: background 0.5s;
+    font-weight: 500;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
 
     &:hover {
       background: var(--stroke);
