feat: implement employee page

--- a/src/assets/styles/_pallete.scss
+++ b/src/assets/styles/_pallete.scss
@@ -1,9 +1,15 @@
 :root {
+  ---transparent: transparent;
   --main-black: #272E37;
   --white: #FFFFFF;
   --gray-10: #efeff0;
   --gray-20: #575a65;
+  --gray-30: #3d3f45;
+  --gray-40: #b0b4bb;
   --main-bg: #F7F8FA;
   --stroke: #DCE4E6;
   --success: #34c759;
+  --error: #e25c5c;
+  --error-light: #fff7f7;
+  --dark: #2d3242;
 }
