--- a/src/components/layout/aside/aside.module.scss
+++ b/src/components/layout/aside/aside.module.scss
@@ -4,6 +4,21 @@
   flex-direction: column;
   align-self: flex-start;
   width: 30%;
+  min-width: 250px;
   row-gap: 15px;
   top: 10px;
+
+  @media (max-width: 768px) {
+    width: 100%;
+    top: 0;
+    padding: 10px 0;
+    flex-wrap: wrap;
+    flex-direction: row;
+    row-gap: 15px;
+    background: var(--white);
+
+    & > div {
+      width: 100%;
+    }
+  }
 }
