--- a/src/components/ui/modals/modal-root.module.scss
+++ b/src/components/ui/modals/modal-root.module.scss
@@ -1,18 +1,19 @@
 .root {
   position: fixed;
   inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
   z-index: 20;
   background-color: rgba(45,50,66,0.3);
 }
 
 .employee {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
   max-width: 500px;
   width: 100%;
   padding: 24px;
-  transform: translate(-50%, -50%);
   z-index: 30;
   background: var(--white);
   border-radius: 16px;
